# R4C_Project

./: .env.template  .flake8  .pre-commit-config.yaml  .~lock.robot_week.xlsx#  pyproject.toml  robot_week.xlsx
R4C/: schema.py  settings.py  urls.py
customers/migrations/: 0002_alter_customer_id.py  0003_alter_customer_email.py
customers/models/: __init__.py  customer.py
orders/migrations/: 0002_alter_order_customer_alter_order_id.py
orders/models/: __init__.py  order.py
robots/: apps.py
robots/business_logic/: exceptions.py
robots/business_logic/dto/: __init__.py  robot.py
robots/business_logic/services/: __init__.py  create_excel_service.py  order.py  robot.py
robots/migrations/: 0002_robotmodel_alter_robot_id_alter_robot_model.py
robots/models/: __init__.py  robot.py  robot_model.py
robots/presentation/: urls.py
robots/presentation/common/: __init__.py
robots/presentation/graphql_api_v1/: schema.py
robots/presentation/rest_api_v1/: __init__.py  views.py
robots/presentation/rest_api_v1/serializers/: __init__.py  robot.py
robots/presentation/rest_api_v1/views/: __init__.py  robot.py
robots/presentation/web/: urls.py
robots/presentation/web/views/: __init__.py  robot.py
